gcc/testsuite/gdc.test/fail_compilation/fail4269c.d
enum bool WWW = is(typeof(A.x));

class A {
    B blah;
    void foo(B b){} 
}

